--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
-
 :root {
   font-family: "Space Mono", monospace;
   font-weight: normal;
   background-color: #F6F8FF;
+  margin: 0; 
+  padding: 0;
   max-width: 100vw;
 }
